--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Mardvey",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.27.7",
+    "browser-sync": "^2.27.9",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -20,5 +20,6 @@
     "jquery.maskedinput": "^1.4.1",
     "sass": "^1.44.0",
     "slick-carousel": "^1.8.1"
-  }
+  },
+  "dependencies": {}
 }
